[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/battle/Battle.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/ButtonHover.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/ui/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/ui/ButtonDisabled.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Silkscreen.ttf"

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 16.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Battle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -226.0
margin_right = 542.0
margin_bottom = 192.0
texture = ExtResource( 1 )

[node name="PlayerPanel" type="Panel" parent="."]
margin_top = 192.0
margin_right = 512.0
margin_bottom = 288.0

[node name="Container" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0

[node name="Actions" type="VBoxContainer" parent="PlayerPanel/Container"]
margin_right = 120.0
margin_bottom = 80.0
rect_min_size = Vector2( 120, 0 )
custom_constants/separation = 8
alignment = 1

[node name="Attack" type="Button" parent="PlayerPanel/Container/Actions"]
margin_top = 2.0
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Attack"

[node name="Magics" type="Button" parent="PlayerPanel/Container/Actions"]
margin_top = 30.0
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Magics"

[node name="Exit" type="Button" parent="PlayerPanel/Container/Actions"]
margin_top = 58.0
margin_right = 120.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Exit"

[node name="Tabs" type="TabContainer" parent="PlayerPanel/Container"]
margin_left = 124.0
margin_right = 516.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 3 )
tab_align = 0
tabs_visible = false

[node name="Attacks" type="VBoxContainer" parent="PlayerPanel/Container/Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -16.0
margin_bottom = -4.0
rect_min_size = Vector2( 372, 0 )
custom_constants/separation = 8
alignment = 1

[node name="Container1" type="HBoxContainer" parent="PlayerPanel/Container/Tabs/Attacks"]
margin_right = 372.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack1" type="Button" parent="PlayerPanel/Container/Tabs/Attacks/Container1"]
margin_right = 184.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Attack1"

[node name="Attack2" type="Button" parent="PlayerPanel/Container/Tabs/Attacks/Container1"]
margin_left = 188.0
margin_right = 372.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Attack2"

[node name="Container2" type="HBoxContainer" parent="PlayerPanel/Container/Tabs/Attacks"]
margin_top = 40.0
margin_right = 372.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Attack3" type="Button" parent="PlayerPanel/Container/Tabs/Attacks/Container2"]
margin_right = 184.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Attack3"

[node name="Attack4" type="Button" parent="PlayerPanel/Container/Tabs/Attacks/Container2"]
margin_left = 188.0
margin_right = 372.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Attack4"

[node name="Magics" type="VBoxContainer" parent="PlayerPanel/Container/Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0
rect_min_size = Vector2( 372, 0 )
custom_constants/separation = 8
alignment = 1

[node name="Container1" type="HBoxContainer" parent="PlayerPanel/Container/Tabs/Magics"]
margin_right = 372.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Magic1" type="Button" parent="PlayerPanel/Container/Tabs/Magics/Container1"]
margin_right = 184.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Magic1"

[node name="Magic2" type="Button" parent="PlayerPanel/Container/Tabs/Magics/Container1"]
margin_left = 188.0
margin_right = 372.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Magic2"

[node name="Container2" type="HBoxContainer" parent="PlayerPanel/Container/Tabs/Magics"]
margin_top = 38.0
margin_right = 372.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Magic3" type="Button" parent="PlayerPanel/Container/Tabs/Magics/Container2"]
margin_right = 184.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Magic3"

[node name="Magic4" type="Button" parent="PlayerPanel/Container/Tabs/Magics/Container2"]
margin_left = 188.0
margin_right = 372.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
text = "Magic4"

[node name="Positions" type="Node2D" parent="."]

[node name="Character1" type="Position2D" parent="Positions"]
position = Vector2( 97, 67 )

[node name="Character2" type="Position2D" parent="Positions"]
position = Vector2( 58, 129 )

[node name="Character3" type="Position2D" parent="Positions"]
position = Vector2( 209, 67 )

[node name="Character4" type="Position2D" parent="Positions"]
position = Vector2( 179, 129 )

[node name="Enemy1" type="Position2D" parent="Positions"]
position = Vector2( 341, 68 )

[node name="Enemy2" type="Position2D" parent="Positions"]
position = Vector2( 302, 130 )

[node name="Enemy3" type="Position2D" parent="Positions"]
position = Vector2( 453, 68 )

[node name="Enemy4" type="Position2D" parent="Positions"]
position = Vector2( 423, 130 )

[node name="Debug" type="Label" parent="."]
margin_right = 542.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )

[connection signal="pressed" from="PlayerPanel/Container/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Actions/Magics" to="." method="_on_Magics_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Actions/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Attacks/Container1/Attack1" to="." method="_on_Attack1_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Attacks/Container1/Attack2" to="." method="_on_Attack2_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Attacks/Container2/Attack3" to="." method="_on_Attack3_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Attacks/Container2/Attack4" to="." method="_on_Attack4_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Magics/Container1/Magic1" to="." method="_on_Magic1_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Magics/Container1/Magic2" to="." method="_on_Magic2_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Magics/Container2/Magic3" to="." method="_on_Magic3_pressed"]
[connection signal="pressed" from="PlayerPanel/Container/Tabs/Magics/Container2/Magic4" to="." method="_on_Magic4_pressed"]
